--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/traffic-api?createDatabaseIfNo
 spring.datasource.username=root
 spring.datasource.password=your_password
 
+spring.jpa.show-sql=true
+
