--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<configuration>
+					<url>jdbc:mysql://localhost:3306/traffic-api</url>
+					<user>root</user>
+					<password>your_password</password>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
