--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=your_password
 spring.jpa.show-sql=true
 server.port=9090
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
